--- a/css/person.css
+++ b/css/person.css
@@ -15,19 +15,22 @@ header{
     background: white;
     position: fixed;
     width: 100%;
-    height: 10%;
+    height: 126px;
+    top: 0px;
     font-family: 'Inter700';
     border-bottom: 1px solid black;
-    top: 0px;
-    z-index: 1;
+    z-index: 3;
 }
 .header-content{
     display: flex;
     justify-content: space-between;
-    padding: 0px 140px 0 140px;
+    flex-direction: row;
 }
 .logo{
+    margin-left: 140px;
     margin-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
 }
 .logo img{
     width: 44px;
@@ -42,6 +45,7 @@ header{
     margin-left: 30px;
 }
 .header-nav{
+    margin-right: 150px;
     margin-top: 50px;
     word-spacing: 20px;
 }
@@ -49,13 +53,14 @@ header{
     display: inline;
 }
 .middle-content{
-    margin: 140px 140px 0 140px;
+    margin: 150px auto;
+    max-width: 1650px;
 }
 /* SECTION STYLES */
 .section-profile-background{
     background: url(../img/backgroundusa2georgia.svg);
     background-size:cover;
-    width: 1640px;
+    width: 100%;
     height: 275px;
 }
 .section-profile{
@@ -84,11 +89,11 @@ header{
     flex-direction: column;
     justify-content: center;
     gap: 10px;
-    left: 10%;
+    left: 4%;
     top: 75%;
 }
 .section-profile-info{
-    width: 1640px;
+    width: 100%;
     height: 260px;
     padding: 20px 0 0 270px;
 }
@@ -118,7 +123,7 @@ header{
     border: none;
     position: absolute;
     right: 0%;
-    top: 55%;
+    top: 60%;
 }
 .box-send-button span{
     vertical-align: top;
@@ -137,7 +142,7 @@ header{
     line-height: 44px;
 }
 .about-us-paragraph{
-    max-width: 1447.69px;
+    width: 100%;
     min-height: 130px;
     font-size: 27px;
     line-height: 40px;
@@ -146,7 +151,7 @@ header{
 }
 .grid-table{
     display: grid;
-    width:1200px;
+    width:100%;
     grid-template-columns:60px auto auto auto;
     grid-template-rows:repeat(4, auto)
 }
