--- a/css/boxes.css
+++ b/css/boxes.css
@@ -1,4 +1,3 @@
-@import "//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";
 *{
     box-sizing: border-box;
     margin: 0;
@@ -222,7 +221,23 @@ form button{
         grid-template-columns: repeat(2,300px);
         grid-template-rows: repeat(6, 360px);
     }
+  
+}
+/* @media (max-width: 768px){
+    .section-boxes{
+        grid-template-columns: repeat(1, 300px);
+        grid-template-rows: repeat(6, 360px);
+    }
+} */
+
+@media (max-width: 768px){
+    .section-boxes{
+        grid-template-columns: repeat(1,300px);
+    }
     .logo{
-        margin-left: 40px;
+        margin-left: 0;
+    }
+    .header-nav{
+        margin-right: 0;
     }
 }
