--- a/css/font.css
+++ b/css/font.css
@@ -1,14 +1,14 @@
 @font-face {
     font-family: 'PoppinsLight';
-    src: url(../font/Poppins-Light.ttf);
+    src: url(../font/poppins-Light.ttf);
 }
 @font-face {
     font-family: 'PoppinsRegular';
-    src: url(../font/Poppins-Regular.ttf);
+    src: url(../font/poppins-Regular.ttf);
 }
 @font-face {
     font-family: 'PoppinsBold';
-    src: url(../Font/Poppins-Bold.ttf);
+    src: url(../Font/poppins-Bold.ttf);
 }
 .poppins-light{
     font-family: 'PoppinsLight';
