--- a/css/boxes-font.css
+++ b/css/boxes-font.css
@@ -1,9 +1,9 @@
 @import url('https://free.bboxtype.com/embedfonts/?family=FiraGO:400');
 @font-face {
-    font-family: 'Inter700';
-    src: url(../font/Inter-Bold.ttf);
+    font-family: 'inter700';
+    src: url(../font/inter-Bold.ttf);
 }
 @font-face {
-    font-family: 'Inter300';
-    src: url(../font/Inter-Light.ttf);
+    font-family: 'inter300';
+    src: url(../font/inter-Light.ttf);
 }
