--- a/css/boxes-font.css
+++ b/css/boxes-font.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: 'inter700';
-    src: url(../font/inter-Bold.ttf);
+    src: url(../font/inter-Bold.ttf) format(TrueType);
 }
 @font-face {
     font-family: 'inter300';
-    src: url(../font/inter-Light.ttf);
+    src: url(../font/inter-Light.ttf)  format(TrueType);
 }
